JumpScript/tests/baselines/reference/for-of54.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of54.jump(2,9): error TS2481: Cannot initialize outer scoped variable 'v' in the same scope as block scoped declaration 'v'.


==== tests/cases/conformance/es6/for-ofStatements/for-of54.jump (1 errors) ====
    for (let v of []) {
        var v = 0;
            ~
!!! error TS2481: Cannot initialize outer scoped variable 'v' in the same scope as block scoped declaration 'v'.
    }